--- a/glass/app/src/main/res/layout/fragment_first.xml
+++ b/glass/app/src/main/res/layout/fragment_first.xml
@@ -27,4 +27,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textview_first" />
+
+    <FrameLayout
+        android:layout_width="409dp"
+        android:layout_height="206dp"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp">
+
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
